Add rate limiter

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@strapi/plugin-users-permissions": "5.31.2",
     "@strapi/provider-upload-aws-s3": "^5.31.2",
     "@strapi/strapi": "5.31.2",
+    "koa2-ratelimit": "^1.1.3",
     "pg": "8.8.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -26,7 +27,8 @@
     "styled-components": "^6.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/koa2-ratelimit": "^0.9.7",
+    "@types/node": "^20.19.26",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "typescript": "^5"
